# CHENG

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  bootup.ps1  cloudbuild.yaml  cloudrun.yaml  deploy.ps1  deploy.sh  diff_multi_section.patch  docker-compose.yml  pyproject.toml  startup.ps1
.claude/agents/: aero-scout.md  developer.md  developer_agent.md  project_manager_agent.md  ux-scout.md
.claude/commands/: add-feature.md  build-feature.md  pm.md
.github/workflows/: ci.yml
backend/: airfoil_data.py  cleanup.py  datcom.py  main.py  mass_properties.py  models.py  stability.py  storage.py  validation.py
backend/export/: __init__.py  joints.py  package.py  section.py  test_joint.py
backend/geometry/: __init__.py  airfoil.py  control_surfaces.py  engine.py  fuselage.py  landing_gear.py  tail.py  tessellate.py  wing.py
backend/routes/: __init__.py  designs.py  export.py  generate.py  info.py  presets.py  websocket.py
datcom/: generate_datcom_constants.py
docs/: aero_parameters.md  architecture.md  cross_review_aero.md  cross_review_pm.md  cross_review_ux.md  implementation.md  implementation_guide.md  issue_audit.json  mvp_spec.md  next_steps.md  product_requirements.md  test_profile.md  test_strategy.md  ux_design.md  v0.7_aero_guidance.md  v0.7_ux_guidance.md  vitest_changed_verification.md
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
reqs/aerospace/: dynamic-stability-datcom.md  xfoil-airfoil-polars.md  xfoil-cfd-expert-findings.md
scripts/: test-precommit.sh
(+176 files in other folders)
